# ground_control_icra

./: README.md  docker-compose.simulators.yml  docker-compose.yml
realm_gc/rgc/: CMakeLists.txt  package.xml
realm_gc/rgc/launch/: tro_all.launch  tro_f1tenth.launch  tro_surrounding.launch  tro_turtlebot.launch
realm_gc/rgc/launch/sim/: all_simulators.launch  f1tenth_simulator.launch  turtlebot_simulator.launch
realm_gc/rgc_control/: package.xml  setup.py
realm_gc/rgc_control/launch/: load_trajectory.launch
realm_gc/rgc_control/saved_policies/v0/base/: non_ego_traj_0.eqx  non_ego_traj_1.eqx
realm_gc/rgc_control/saved_policies/v0/predict_mala/: mlp.eqx  non_ego_traj_0.eqx  non_ego_traj_1.eqx
realm_gc/rgc_control/saved_policies/v0/predictrepair_mala/: ego_traj.eqx  mlp.eqx  non_ego_traj_0.eqx  non_ego_traj_1.eqx
realm_gc/rgc_control/saved_policies/v1/predict/: ego_traj.eqx  non_ego_traj_0.eqx  non_ego_traj_1.eqx
realm_gc/rgc_control/saved_policies/v1/predictrepair/: ego_traj.eqx  mlp.eqx  non_ego_traj_0.eqx  non_ego_traj_1.eqx
realm_gc/rgc_control/src/rgc_control/: f1tenth_control.py  f1tenth_surrounding.py  robot_control.py  turtlebot_control.py
realm_gc/rgc_control/src/rgc_control/policies/: common.py  composite.py  policy.py  tro_experiment_policies.py
realm_gc/rgc_control/src/rgc_control/policies/tracking/: steering_policies.py  tracking_policies.py  trajectory.py
realm_gc/rgc_control/src/rgc_control/policies/visual/: common.py  vision_barrier_policies.py  vision_mlp_policies.py
realm_gc/rgc_simulator/: CMakeLists.txt  package.xml  setup.py
realm_gc/rgc_simulator/src/rgc_simulator/: f1tenth_simulator.py  turtlebot_simulator.py
realm_gc/rgc_state_estimators/: CMakeLists.txt  package.xml  setup.py
realm_gc/rgc_state_estimators/msg/: F1TenthState.msg  F1TenthStateCovariance.msg  TurtlebotStateCovariance.msg
realm_gc/rgc_state_estimators/src/rgc_state_estimators/: f1tenth_ekf.py  f1tenth_maf.py  object_estimator.py  state_estimator.py  turtlebot_ekf.py  turtlebot_maf.py
submodules/f1tenth_system/f1tenth_msgs/: CMakeLists.txt  package.xml
submodules/f1tenth_system/f1tenth_msgs/msg/: F1TenthDrive.msg  F1TenthDriveStamped.msg
submodules/f1tenth_system/pose2odom/: CMakeLists.txt  package.xml
submodules/f1tenth_system/pose2odom/include/: pose2odom.h
submodules/f1tenth_system/pose2odom/src/: pose2odom.cpp  pose2odom_node.cpp
submodules/f1tenth_system/racecar/ackermann_cmd_mux/include/ackermann_cmd_mux/: ackermann_cmd_mux_nodelet.hpp  ackermann_cmd_subscribers.hpp  exceptions.hpp
submodules/f1tenth_system/racecar/ackermann_cmd_mux/src/: ackermann_cmd_mux_nodelet.cpp
submodules/f1tenth_system/racecar/racecar/config/racecar-v2/: joy_teleop.yaml  sensors.yaml  vesc.yaml
submodules/f1tenth_system/racecar/racecar/launch/: kiss_icp.launch  laser_scan_matcher.launch  mux.launch  teleop_standalone.launch  vesc.launch
submodules/f1tenth_system/racecar/racecar/launch/includes/common/: sensors.launch.xml
submodules/f1tenth_system/racecar/racecar/launch/includes/racecar-v2/: vesc.launch.xml
submodules/f1tenth_system/racecar/racecar/scripts/: joy_teleop.py
submodules/f1tenth_system/rl_runtime/: CMakeLists.txt  package.xml
submodules/f1tenth_system/rl_runtime/cmake/: FindTensorRT.cmake
submodules/f1tenth_system/rl_runtime/include/: cuda_common.h  cuda_stream.h  infer_v0.h  logger_trt.h  trt_model.h
submodules/f1tenth_system/rl_runtime/launch/: inferv0.launch
submodules/f1tenth_system/rl_runtime/models/infer_v0/: infer_v0.yaml
submodules/f1tenth_system/rl_runtime/src/: cuda_common.cpp  cuda_stream.cpp  infer_v0.cpp  infer_v0_node.cpp  logger_trt.cpp  trt_model.cpp  verify_trt_model.cpp
submodules/f1tenth_system/scan2pc/: CMakeLists.txt  package.xml
submodules/f1tenth_system/scan2pc/include/: scan2pc.h
submodules/f1tenth_system/scan2pc/src/: scan2pc.cpp  scan2pc_node.cpp
submodules/f1tenth_system/vesc/vesc_ackermann/: CMakeLists.txt  package.xml
submodules/f1tenth_system/vesc/vesc_ackermann/include/vesc_ackermann/: ackermann_to_vesc.h
submodules/f1tenth_system/vesc/vesc_ackermann/src/: ackermann_to_vesc.cpp  vesc_to_odom.cpp
submodules/f1tenth_system/vesc/vesc_driver/: CMakeLists.txt
submodules/f1tenth_system/vesc/vesc_driver/include/vesc_driver/: datatypes.h  vesc_driver.h  vesc_interface.h  vesc_packet.h
submodules/f1tenth_system/vesc/vesc_driver/src/: vesc6.ksy  vesc_6.cpp  vesc_6.h  vesc_driver.cpp  vesc_interface.cpp  vesc_packet.cpp
submodules/f1tenth_system/vesc/vesc_msgs/: CMakeLists.txt  package.xml
submodules/f1tenth_system/vesc/vesc_msgs/msg/: VescImu.msg  VescImuStamped.msg  VescInput.msg  VescInputStamped.msg  VescState.msg
