<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>scan2pc</name>
    <version>0.0.1</version>
    <description>
        Scan to pointcloud.
    </description>
    <maintainer email="oswinso@gmail.com">Oswin So</maintainer>
    <author email="oswinso@gmail.com">Oswin So</author>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>laser_geometry</depend>
    <depend>sensor_msgs</depend>

</package>